refactor: simplify cleanup service